# fit-ctu

./: .gitignore  LICENSE  README.md
AG1/task2/: main.c
AG1/task3/: main.cpp
PA1/: hw1.c  hw3.c  hw4.c
PA2/Chess/: Makefile  main.cpp
PA2/Chess/doc/: _abstract_menu_8hpp_source.html  _bishop_8hpp_source.html  _board_8hpp_source.html  _command_8hpp_source.html  _exceptions_8hpp_source.html  _game_data_8hpp_source.html  _game_session_8hpp_source.html  _intelligence_8hpp_source.html  _knight_8hpp_source.html  _local_player_8hpp_source.html  _main_menu_8hpp_source.html  _my_move_8hpp_source.html  _persistence_8hpp_source.html  _player_8hpp_source.html  annotated.html  class_abstract_menu__coll__graph.map  class_abstract_menu__coll__graph.md5  class_abstract_menu__inherit__graph.map  class_abstract_menu__inherit__graph.md5  class_board.html  (+140 more)
PA2/hw1/: main.cpp
PA2/hw2/: main.cpp
PA2/hw5/: main.cpp
bie-ag1/task1/: main.cpp
bie-osy/task2/: main.cpp
bie-pa1/: hw2.c  hw5.c  hw8.c
bie-pa2/Chess/: zadani.txt
bie-pa2/Chess/src/: AbstractMenu.cpp  Bishop.hpp  Board.cpp  Board.hpp  CMakeLists.txt  COMMANDS.hpp  ColorMenu.hpp  Controller.cpp  Controller.hpp  DifficultyMenu.cpp  DifficultyMenu.hpp  Exceptions.hpp  FilePersistence.cpp  FilePersistence.hpp  Intelligence.hpp  Knight.hpp  LoadGameMenu.cpp  LoadGameMenu.hpp  LocalPlayer.cpp  LocalPlayer.hpp  NewGameMenu.hpp  Pawn.hpp  Persistence.cpp  Persistence.hpp  Piece.cpp  Queen.cpp  Queen.hpp  Rook.cpp  main.cpp
bie-pa2/hw3/: main.cpp
bie-pa2/hw4/: main.cpp
bie-pa2/hw6/: main.cpp
bie-pa2/hw7/: main.cpp
(+256 files in other folders)
